# billmate

./: .gitignore  Dockerfile  README.md  docker-compose.yml  install-docker.sh  package-lock.json  package.json  pyproject.toml  shell.nix
docker/: nginx.conf
src/: manage.py
src/base/: utils.py
src/base/migrations/: 0001_initial.py  0002_auto_20240315_0302.py  0003_auto_20240319_2311.py  0004_auto_20240321_1917.py
src/base/static/base/: output.css
src/base/templates/: base.html  footer.html  header.html
src/base/templates/registration/: login.html
src/bill/: views.py
src/bill_group/: apps.py  urls.py  utils.py  views.py
src/bill_group/templates/bill_group/: add_bill.html  bill_index.html  create.html  detail_bill.html  index.html  update.html  update_bill.html
src/billmate/: asgi.py  settings.py  urls.py  wsgi.py
src/home/: urls.py  views.py
src/home/templates/home/: index.html
src/participant/: urls.py  views.py
src/participant/templates/participant/: create.html  list_participant.html
src/transaction/: urls.py  views.py
src/transaction/templates/transaction/: list_transaction.html
