[project]
name = "billmate"
version = "0.1.0"
description = "A simply way to tracking your bill"
authors = [
    {name = "yosephbernandus", email = "yosephbernandus@gmail.com"},
]
dependencies = [
    "Django>=5.0.3",
    "django-environ>=0.11.2",
    "psycopg-binary>=3.1.18",
    "psycopg2-binary>=2.9.9",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
